--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,21 +13,51 @@ jobs:
       packages: write
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout source
+      uses: actions/checkout@v4
 
-    - name: set up JDK 17
+    - name: Report – Checkout completed
+      uses: appleboy/telegram-action@v0.1.1
+      with:
+        token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+        to: ${{ secrets.TELEGRAM_CHAT_ID }}
+        message: "Step 1/6: Source checkout completed"
+
+    - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
+
+    - name: Report – JDK ready
+      uses: appleboy/telegram-action@v0.1.1
+      with:
+        token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+        to: ${{ secrets.TELEGRAM_CHAT_ID }}
+        message: "Step 2/6: JDK 17 configured"
 
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2
       with:
         gradle-version: '8.4'
 
+    - name: Report – Gradle ready
+      uses: appleboy/telegram-action@v0.1.1
+      with:
+        token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+        to: ${{ secrets.TELEGRAM_CHAT_ID }}
+        message: "Step 3/6: Gradle environment ready"
+
     - name: Build Debug APK
       run: gradle assembleDebug --no-daemon --info --stacktrace
+
+    - name: Report – Build completed
+      if: success()
+      uses: appleboy/telegram-action@v0.1.1
+      with:
+        token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+        to: ${{ secrets.TELEGRAM_CHAT_ID }}
+        message: "Step 4/6: APK build successful"
 
     - name: Prepare APK
       run: cp app/build/outputs/apk/debug/app-debug.apk FlowStable-Wallet-Latest.apk
@@ -47,3 +77,17 @@ jobs:
         files: FlowStable-Wallet-Latest.apk
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Final build report
+      if: always()
+      uses: appleboy/telegram-action@v0.1.1
+      with:
+        token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+        to: ${{ secrets.TELEGRAM_CHAT_ID }}
+        message: |
+          Android CI Report
+
+          Repository: ${{ github.repository }}
+          Branch: ${{ github.ref_name }}
+          Commit: ${{ github.sha }}
+          Job Status: ${{ job.status }}
