Robust Wallet Management: Async crypto ops, loading states, and startup initialization

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "java.configuration.updateBuildConfiguration": "automatic",
-    "workbench.colorTheme": "Solarized Dark"
+    "workbench.colorTheme": "Tokyo Night Storm"
 }
