--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -46,7 +46,7 @@ jobs:
       uses: appleboy/telegram-action@v1.0.1
       with:
         token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-        to: '-1003600205905'
+        to: ${{ secrets.TELEGRAM_CHAT_ID }}
         document: FlowStable-Wallet-Latest.apk
         format: markdown
         message: |
@@ -83,7 +83,7 @@ jobs:
       uses: appleboy/telegram-action@v0.1.1
       with:
         token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-        to: '-1003600205905'
+        to: ${{ secrets.TELEGRAM_CHAT_ID }}
         message: |
           📊 Android CI Report
 
