Fix CI deployment: Reordered steps to ensure GitHub upload/release happens BEFORE flaky Telegram integration

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -62,20 +62,7 @@ jobs:
     - name: Prepare APK
       run: cp app/build/outputs/apk/debug/app-debug.apk FlowStable-Wallet-Latest.apk
 
-    - name: Send APK to Telegram
-      if: success()
-      uses: appleboy/telegram-action@v1.0.1
-      with:
-        token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-        to: ${{ secrets.TELEGRAM_CHAT_ID }}
-        document: FlowStable-Wallet-Latest.apk
-        format: markdown
-        message: |
-          ✅ **New Android Build Ready!**
 
-          **App:** FlowStable Wallet
-          **Branch:** `${{ github.ref_name }}`
-          **Commit:** `${{ github.sha }}`
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
@@ -98,6 +85,22 @@ jobs:
         echo "### ✅ Build Successful" >> $GITHUB_STEP_SUMMARY
         echo "Download the raw APK directly here:" >> $GITHUB_STEP_SUMMARY
         echo "[🚀 Download FlowStable-Wallet-Latest.apk](https://github.com/${{ github.repository }}/releases/download/latest/FlowStable-Wallet-Latest.apk)" >> $GITHUB_STEP_SUMMARY
+
+    - name: Send APK to Telegram
+      if: success()
+      continue-on-error: true
+      uses: appleboy/telegram-action@v1.0.1
+      with:
+        token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+        to: ${{ secrets.TELEGRAM_CHAT_ID }}
+        document: FlowStable-Wallet-Latest.apk
+        format: markdown
+        message: |
+          ✅ **New Android Build Ready!**
+
+          **App:** FlowStable Wallet
+          **Branch:** `${{ github.ref_name }}`
+          **Commit:** `${{ github.sha }}`
 
     - name: Final build report
       if: always()
