--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -17,6 +17,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Report – Checkout completed
+      continue-on-error: true
       uses: appleboy/telegram-action@v0.1.1
       with:
         token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
@@ -30,6 +31,7 @@ jobs:
         distribution: 'temurin'
 
     - name: Report – JDK ready
+      continue-on-error: true
       uses: appleboy/telegram-action@v0.1.1
       with:
         token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
@@ -42,6 +44,7 @@ jobs:
         gradle-version: '8.4'
 
     - name: Report – Gradle ready
+      continue-on-error: true
       uses: appleboy/telegram-action@v0.1.1
       with:
         token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
@@ -53,6 +56,7 @@ jobs:
 
     - name: Report – Build completed
       if: success()
+      continue-on-error: true
       uses: appleboy/telegram-action@v0.1.1
       with:
         token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
@@ -104,6 +108,7 @@ jobs:
 
     - name: Final build report
       if: always()
+      continue-on-error: true
       uses: appleboy/telegram-action@v0.1.1
       with:
         token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
