--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,122 +1,107 @@
 name: Android Build
 
 on:
-  push:
-    branches: [ master ]
-  workflow_dispatch: {}
+push:
+branches: [ master ]
+workflow_dispatch: {}
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      packages: write
+build:
+runs-on: ubuntu-latest
+permissions:
+contents: write
+packages: write
 
-    steps:
-    - name: Checkout source
-      uses: actions/checkout@v4
+steps:
+- name: Checkout source
+uses: actions/checkout@v4
 
-    - name: Report – Checkout completed
-      continue-on-error: true
-      uses: appleboy/telegram-action@v0.1.1
-      with:
-        token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-        to: ${{ secrets.TELEGRAM_CHAT_ID }}
-        message: "Step 1/7: Source checkout completed"
+- name: Report – Checkout completed
+uses: appleboy/telegram-action@v0.1.1
+with:
+token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+to: ${{ secrets.TELEGRAM_CHAT_ID }}
+message: "Step 1/7: Source checkout completed"
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
+- name: Set up JDK 17
+uses: actions/setup-java@v4
+with:
+java-version: '17'
+distribution: 'temurin'
 
-    - name: Report – JDK ready
-      continue-on-error: true
-      uses: appleboy/telegram-action@v0.1.1
-      with:
-        token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-        to: ${{ secrets.TELEGRAM_CHAT_ID }}
-        message: "Step 2/7: JDK 17 configured"
+- name: Report – JDK ready
+uses: appleboy/telegram-action@v0.1.1
+with:
+token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+to: ${{ secrets.TELEGRAM_CHAT_ID }}
+message: "Step 2/7: JDK 17 configured"
 
-    - name: Setup Gradle
-      uses: gradle/gradle-build-action@v2
-      with:
-        gradle-version: '8.4'
+- name: Setup Gradle
+uses: gradle/gradle-build-action@v2
+with:
+gradle-version: '8.4'
 
-    - name: Report – Gradle ready
-      continue-on-error: true
-      uses: appleboy/telegram-action@v0.1.1
-      with:
-        token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-        to: ${{ secrets.TELEGRAM_CHAT_ID }}
-        message: "Step 3/7: Gradle environment ready"
+- name: Report – Gradle ready
+uses: appleboy/telegram-action@v0.1.1
+with:
+token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+to: ${{ secrets.TELEGRAM_CHAT_ID }}
+message: "Step 3/7: Gradle environment ready"
 
-    - name: Build Debug APK
-      run: gradle clean assembleDebug --no-daemon --info --stacktrace
+- name: Build Debug APK
+run: gradle clean assembleDebug --no-daemon --info --stacktrace
 
-    - name: Report – Build completed
-      if: success()
-      continue-on-error: true
-      uses: appleboy/telegram-action@v0.1.1
-      with:
-        token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-        to: ${{ secrets.TELEGRAM_CHAT_ID }}
-        message: "Step 4/7: APK build successful"
+- name: Report – Build completed
+if: success()
+uses: appleboy/telegram-action@v0.1.1
+with:
+token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+to: ${{ secrets.TELEGRAM_CHAT_ID }}
+message: "Step 4/7: APK build successful"
 
-    - name: Prepare APK
-      run: cp app/build/outputs/apk/debug/app-debug.apk FlowStable-Wallet-Latest.apk
+- name: Prepare APK
+run: cp app/build/outputs/apk/debug/app-debug.apk FlowStable-Wallet-Latest.apk
 
+- name: Send APK to Telegram
+if: success()
+uses: appleboy/telegram-action@v0.1.1
+with:
+token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+to: ${{ secrets.TELEGRAM_CHAT_ID }}
+document: FlowStable-Wallet-Latest.apk
+message: |
+         ✅ New Android Build Ready!
 
+         App: FlowStable Wallet
+         Branch: ${{ github.ref_name }}
+         Commit: ${{ github.sha }}
 
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: FlowStable-Wallet-Artifact
-        path: FlowStable-Wallet-Latest.apk
+   - name: Upload Artifact
+uses: actions/upload-artifact@v4
+with:
+name: FlowStable-Wallet-Artifact
+path: FlowStable-Wallet-Latest.apk
 
-    - name: Create Release
-      if: github.ref == 'refs/heads/master'
-      uses: softprops/action-gh-release@v1
-      with:
-        tag_name: latest
-        name: Latest Continuous Build
-        files: FlowStable-Wallet-Latest.apk
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+- name: Create Release
+if: github.ref == 'refs/heads/master'
+uses: softprops/action-gh-release@v1
+with:
+tag_name: latest
+name: Latest Continuous Build
+files: FlowStable-Wallet-Latest.apk
+env:
+GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Direct APK Link
-      run: |
-        echo "### ✅ Build Successful" >> $GITHUB_STEP_SUMMARY
-        echo "Download the raw APK directly here:" >> $GITHUB_STEP_SUMMARY
-        echo "[🚀 Download FlowStable-Wallet-Latest.apk](https://github.com/${{ github.repository }}/releases/download/latest/FlowStable-Wallet-Latest.apk)" >> $GITHUB_STEP_SUMMARY
+- name: Final build report
+if: always()
+uses: appleboy/telegram-action@v0.1.1
+with:
+token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+to: ${{ secrets.TELEGRAM_CHAT_ID }}
+message: |
+         📊 Android CI Report
 
-    - name: Send APK to Telegram
-      if: success()
-      continue-on-error: true
-      uses: appleboy/telegram-action@v1.0.1
-      with:
-        token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-        to: ${{ secrets.TELEGRAM_CHAT_ID }}
-        document: FlowStable-Wallet-Latest.apk
-        format: markdown
-        message: |
-          ✅ **New Android Build Ready!**
-
-          **App:** FlowStable Wallet
-          **Branch:** `${{ github.ref_name }}`
-          **Commit:** `${{ github.sha }}`
-
-    - name: Final build report
-      if: always()
-      continue-on-error: true
-      uses: appleboy/telegram-action@v0.1.1
-      with:
-        token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-        to: ${{ secrets.TELEGRAM_CHAT_ID }}
-        message: |
-          📊 Android CI Report
-
-          Repository: ${{ github.repository }}
-          Branch: ${{ github.ref_name }}
-          Commit: ${{ github.sha }}
-          Job Status: ${{ job.status }}
+         Repository: ${{ github.repository }}
+         Branch: ${{ github.ref_name }}
+         Commit: ${{ github.sha }}
+         Job Status: ${{ job.status }}
