--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CryptoWallet"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        tools:replace="android:dataExtractionRules">
         <activity
             android:name=".MainActivity"
             android:exported="true"
